--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,14 @@
     <servlet-name>AlumnoServlet</servlet-name>
     <url-pattern>/Alumno.do</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProfesorServlet</display-name>
+    <servlet-name>ProfesorServlet</servlet-name>
+    <servlet-class>com.ipartek.formacion.controler.ProfesorServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProfesorServlet</servlet-name>
+    <url-pattern>/Profesor.doc</url-pattern>
+  </servlet-mapping>
 </web-app>
