--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,34 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>AlumnoServlet</display-name>
+    <servlet-name>AlumnoServlet</servlet-name>
+    <servlet-class>com.ipartek.formacion.controller.AlumnoServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AlumnoServlet</servlet-name>
+    <url-pattern>/AlumnoServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AlumnoServet</display-name>
+    <servlet-name>AlumnoServet</servlet-name>
+    <servlet-class>com.ipartek.formacion.controller.AlumnoServet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AlumnoServet</servlet-name>
+    <url-pattern>/alumno.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProfesorServlet</display-name>
+    <servlet-name>ProfesorServlet</servlet-name>
+    <servlet-class>com.ipartek.formacion.controller.ProfesorServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProfesorServlet</servlet-name>
+    <url-pattern>/profesor.do</url-pattern>
+  </servlet-mapping>
 </web-app>
