--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -15,4 +15,14 @@
     <servlet-name>AlumnoServlet</servlet-name>
     <url-pattern>/alumno.do</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description>Este servlet va gestionar las peticiones relacionadas con los profesores</description>
+    <display-name>ProfesorServlet</display-name>
+    <servlet-name>ProfesorServlet</servlet-name>
+    <servlet-class>com.ipartek.formacion.controller.ProfesorServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProfesorServlet</servlet-name>
+    <url-pattern>/Profesor.do</url-pattern>
+  </servlet-mapping>
 </web-app>
