--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,16 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>AlumnoServlet</servlet-name>
-    <url-pattern>/Alumno.do</url-pattern>
+    <url-pattern>/alumno.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProfesorServlet</display-name>
+    <servlet-name>ProfesorServlet</servlet-name>
+    <servlet-class>com.ipartek.formacion.controller.ProfesorServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProfesorServlet</servlet-name>
+    <url-pattern>/profesor.do</url-pattern>
   </servlet-mapping>
 </web-app>
