--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>AlumnoServlet</servlet-name>
-    <url-pattern>/Alumno.do</url-pattern>
+    <url-pattern>/alumno.do</url-pattern>
   </servlet-mapping>
   <servlet>
     <description></description>
