--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,6 @@
     <servlet-name>AlumnoServlet</servlet-name>
     <url-pattern>/alumno.do</url-pattern>
   </servlet-mapping>
- 
   
   <servlet>
     <description>Este servlet va a gestionar las peticiones relacionadas con los profesores</description>
@@ -23,8 +22,20 @@
     <servlet-name>ProfesorServlet</servlet-name>
     <servlet-class>com.ipartek.formacion.controller.ProfesorServlet</servlet-class>
   </servlet>
-  <servlet-mapping>
+    <servlet-mapping>
     <servlet-name>ProfesorServlet</servlet-name>
     <url-pattern>/profesor.do</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <description></description>
+    <description>Este servlet va a gestionar las peticiones relacionadas con los cursos</description>
+    <display-name>CursoServlet</display-name>
+    <servlet-name>CursoServlet</servlet-name>
+    <servlet-class>com.ipartek.formacion.controller.CursoServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CursoServlet</servlet-name>
+    <url-pattern>/curso.do</url-pattern>
   </servlet-mapping>
 </web-app>
