--- a/gestiondocente/pom.xml
+++ b/gestiondocente/pom.xml
@@ -7,8 +7,8 @@
   <name>GestionDocente</name>
   <description>Este proyecto pretende gestionar las altas bajas y modificaciones de alumnos, profesores y cursos.</description>
   <properties>
-		<encoding>UTF-8</encoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jstl.version>1.2</jstl.version>
   </properties>
   <dependencies>
           <!-- Servlet -->
@@ -18,12 +18,19 @@
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
+        <!-- JSP -->
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
             <version>2.1</version>
             <scope>provided</scope>
         </dependency>
+        <!-- JSTL -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
  </dependencies>
 <build>
 	<plugins>
