--- a/gestiondocente/pom.xml
+++ b/gestiondocente/pom.xml
@@ -8,8 +8,9 @@
 	<name>GestionDocente</name>
 	<description>Este proyecto pretende gestionar las altas bajas y modificaciones de alumnos, profesores y cursos.</description>
 	<properties>
-		<encoding>UTF-8</encoding>
+		<!-- son como costantes del proyecto--> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jstl.version>1.2</jstl.version>
 	</properties>
 	<dependencies>
 		<!-- Servlet -->
@@ -24,6 +25,13 @@
 			<artifactId>jsp-api</artifactId>
 			<version>2.1</version>
 			<scope>provided</scope>
+		</dependency>
+		<!-- JSTL -->
+		<!-- JS -->
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>${jstl.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
