--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -15,18 +15,16 @@
     <servlet-name>AlumnoServlet</servlet-name>
     <url-pattern>/alumno.do</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <description>Este servlet va a gestionar las peticiones relacionadas con los profesores</description>
     <display-name>ProfesorServlet</display-name>
     <servlet-name>ProfesorServlet</servlet-name>
     <servlet-class>com.ipartek.formacion.controller.ProfesorServlet</servlet-class>
   </servlet>
-    <servlet-mapping>
+  <servlet-mapping>
     <servlet-name>ProfesorServlet</servlet-name>
     <url-pattern>/profesor.do</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <description></description>
     <description>Este servlet va a gestionar las peticiones relacionadas con los cursos</description>
@@ -37,5 +35,15 @@
   <servlet-mapping>
     <servlet-name>CursoServlet</servlet-name>
     <url-pattern>/curso.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>LoginServlet</display-name>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>com.ipartek.formacion.controller.LoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/login.do</url-pattern>
   </servlet-mapping>
 </web-app>
