--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <display-name>gestiondocente</display-name>
-  <!-- Ficheros de entrada. Se intenta acceder en el orden en que está declarados.
-       Si encuentra el primero no busca el resto. -->
   <welcome-file-list>
-  	<!-- Se accede al Servlet LoginServlet que gestionará el login. -->
     <welcome-file>/login.do</welcome-file>
-    <!-- En caso que no encuentre el Servlet LoginServlet accederá a index.jsp. -->   
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
@@ -58,5 +54,15 @@
   <servlet-mapping>
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/login.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>IdiomaServlet</display-name>
+    <servlet-name>IdiomaServlet</servlet-name>
+    <servlet-class>com.ipartek.formacion.controller.IdiomaServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>IdiomaServlet</servlet-name>
+    <url-pattern>/idioma.do</url-pattern>
   </servlet-mapping>
 </web-app>
