--- a/gestiondocente/pom.xml
+++ b/gestiondocente/pom.xml
@@ -9,6 +9,8 @@
   <properties>
 		<encoding>UTF-8</encoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  		<!-- Esto es una cte a nivel de proyecto, y en las dependencias nos referrimos a ellas con EL como ${jstl.version} -->
+  		<jstl.version>1.2</jstl.version>
   </properties>
   <dependencies>
           <!-- Servlet -->
@@ -24,6 +26,12 @@
             <version>2.1</version>
             <scope>provided</scope>
         </dependency>
+        <!-- JSTL Java -->
+		<dependency>
+ 		   <groupId>javax.servlet</groupId>
+ 		   <artifactId>jstl</artifactId>
+ 		   <version>${jstl.version}</version>
+		</dependency>
  </dependencies>
 <build>
 	<plugins>
