--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,6 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <display-name>gestiondocente</display-name>
   <welcome-file-list>
-    <welcome-file>/login.do</welcome-file>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
@@ -65,4 +64,13 @@
     <servlet-name>IdiomaServlet</servlet-name>
     <url-pattern>/idioma.do</url-pattern>
   </servlet-mapping>
+  <filter>
+    <display-name>CharterFilter</display-name>
+    <filter-name>CharterFilter</filter-name>
+    <filter-class>filtrer.CharterFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>CharterFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
