--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -55,4 +55,22 @@
     <servlet-name>IdiomaServlet</servlet-name>
     <url-pattern>/idioma.do</url-pattern>
   </servlet-mapping>
+  <filter>
+    <display-name>CharterFilter</display-name>
+    <filter-name>CharterFilter</filter-name>
+    <filter-class>com.ipartek.formacion.controller.filters.CharterFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>CharterFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter>
+    <display-name>ServletFilter</display-name>
+    <filter-name>ServletFilter</filter-name>
+    <filter-class>com.ipartek.formacion.controller.filters.ServletFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>ServletFilter</filter-name>
+    <url-pattern>*.do</url-pattern>
+  </filter-mapping>
 </web-app>
