--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -72,4 +72,8 @@
     <filter-name>ServletFilter</filter-name>
     <url-pattern>*.do</url-pattern>
   </filter-mapping>
+  <error-page>
+  	<error-code>404</error-code>
+  	<location>/error.html</location>
+  </error-page>
 </web-app>
