--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -24,16 +24,28 @@
     <servlet-name>ProfesorServlet</servlet-name>
     <url-pattern>/profesor.do</url-pattern>
   </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>CursoServlet</display-name>
-    <servlet-name>CursoServlet</servlet-name>
-    <servlet-class>com.ipartek.formacion.controller.CursoServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>CursoServlet</servlet-name>
-    <url-pattern>/curso.do</url-pattern>
-  </servlet-mapping>
+  <filter>
+    <display-name>CharterFilter</display-name>
+    <filter-name>CharterFilter</filter-name>
+    <filter-class>com.ipartek.formacion.controller.filters.CharterFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>CharterFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter>
+    <display-name>ServletFilter</display-name>
+    <filter-name>ServletFilter</filter-name>
+    <filter-class>com.ipartek.formacion.controller.filters.ServletFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>ServletFilter</filter-name>
+    <url-pattern>*.do</url-pattern>
+  </filter-mapping>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/error.html</location>
+  </error-page>
   <servlet>
     <description></description>
     <display-name>LoginServlet</display-name>
@@ -54,26 +66,14 @@
     <servlet-name>IdiomaServlet</servlet-name>
     <url-pattern>/idioma.do</url-pattern>
   </servlet-mapping>
-  <filter>
-    <display-name>CharacterFilter</display-name>
-    <filter-name>CharacterFilter</filter-name>
-    <filter-class>com.ipartek.formacion.controller.filters.CharacterFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>CharacterFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-  <filter>
-    <display-name>ServletFilter</display-name>
-    <filter-name>ServletFilter</filter-name>
-    <filter-class>com.ipartek.formacion.controller.filters.ServletFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>ServletFilter</filter-name>
-    <url-pattern>*.do</url-pattern>
-  </filter-mapping>
-  <error-page>
-  	<error-code>404</error-code>
-  	<location>/error.html</location>
-  </error-page>
+  <servlet>
+    <description></description>
+    <display-name>CursoServlet</display-name>
+    <servlet-name>CursoServlet</servlet-name>
+    <servlet-class>com.ipartek.formacion.controller.CursoServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CursoServlet</servlet-name>
+    <url-pattern>/curso.do</url-pattern>
+  </servlet-mapping>
 </web-app>
