--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -82,9 +82,11 @@
     <filter-name>CharterFiler</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  <!-- Direccionamiento de errores. -->
   <error-page>
-  	<error-code>404</error-code>
-  	<location>/error.jsp</location>
+    <error-code>404</error-code>
+    <location>/error.jsp</location>
   </error-page>
+  <listener>
+    <listener-class>com.ipartek.formacion.controller.listeners.InitListener</listener-class>
+  </listener>
 </web-app>
