--- a/gestiondocente/pom.xml
+++ b/gestiondocente/pom.xml
@@ -11,6 +11,7 @@
 		<!-- son como costantes del proyecto--> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jstl.version>1.2</jstl.version>
+		<log4j.version>1.2.17</log4j.version>
 	</properties>
 	<dependencies>
 		<!-- Servlet -->
@@ -27,11 +28,18 @@
 			<scope>provided</scope>
 		</dependency>
 		<!-- JSTL -->
-		<!-- JS -->
+		
 		<dependency>
 		    <groupId>javax.servlet</groupId>
 		    <artifactId>jstl</artifactId>
 		    <version>${jstl.version}</version>
+		</dependency>
+		<!-- LOG4 -->
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+		<dependency>
+    		<groupId>log4j</groupId>
+    		<artifactId>log4j</artifactId>
+   			<version>${log4j.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
