--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -76,7 +76,10 @@
     <url-pattern>/*do</url-pattern>
   </filter-mapping>
   <error-page>
-  	<error-code>404</error-code>
-  	<location>/error.html</location>
+    <error-code>404</error-code>
+    <location>/error.html</location>
   </error-page>
+  <listener>
+    <listener-class>com.ipartek.formacion.controler.listeners.InitListener</listener-class>
+  </listener>
 </web-app>
