--- a/gestiondocente/pom.xml
+++ b/gestiondocente/pom.xml
@@ -10,6 +10,7 @@
 		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jstl.version>1.2</jstl.version>
+		<log4j.version>1.2.17</log4j.version>
   </properties>
   <dependencies>
           <!-- Servlet -->
@@ -29,6 +30,11 @@
     		<groupId>javax.servlet</groupId>
     		<artifactId>jstl</artifactId>
     		<version>${jstl.version}</version>
+		</dependency>
+		<dependency>
+    		<groupId>log4j</groupId>
+    		<artifactId>log4j</artifactId>
+    		<version>${log4j.version}</version>
 		</dependency>
  </dependencies>
 <build>
