--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -73,7 +73,10 @@
     <url-pattern>*.do</url-pattern>
   </filter-mapping>
   <error-page>
-  	<error-code>404</error-code>
- 	<location>/error.jsp</location>
-  </error-page>	
- </web-app>
+    <error-code>404</error-code>
+    <location>/error.jsp</location>
+  </error-page>
+  <listener>
+    <listener-class>com.ipartek.formacion.controller.listeners.InitListener</listener-class>
+  </listener>
+</web-app>
