--- a/gestiondocente/pom.xml
+++ b/gestiondocente/pom.xml
@@ -7,9 +7,9 @@
   <name>GestionDocente</name>
   <description>Este proyecto pretende gestionar las altas bajas y modificaciones de alumnos, profesores y cursos.</description>
   <properties>
-	
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jstl.version>1.2</jstl.version>
+		<log4j.version>1.2.17</log4j.version>
   </properties>
   <dependencies>
           <!-- Servlet -->
@@ -19,17 +19,25 @@
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
+        <!-- JSP -->
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
             <version>2.1</version>
             <scope>provided</scope>
         </dependency>
-         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>${jstl.version}</version>
-        </dependency>
+        <!-- JSTL -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>${jstl.version}</version>
+		</dependency>
+		<!-- LOG4J -->
+		<dependency>
+    		<groupId>log4j</groupId>
+    		<artifactId>log4j</artifactId>
+    		<version>${log4j.version}</version>
+		</dependency>
  </dependencies>
 <build>
 	<plugins>
@@ -45,6 +53,15 @@
                  <showDeprecation>true</showDeprecation>
              </configuration>
          </plugin>
+         <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-war-plugin</artifactId>
+		        <version>2.3</version>
+		        <configuration>
+		          <warName>gestiondocente</warName>
+		        </configuration>
+      		</plugin>
 	</plugins>
+	<finalName>${project.artifactId}-${project.version}</finalName>
 </build>
 </project>
