Pagina de error añadida (error.html en carpeta webapp). LOG configurado.

--- a/gestiondocente/src/main/resources/log4j.properties
+++ b/gestiondocente/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 
 #ALL: Todos los niveles de traza.
 #PANTALLA: VA a ser el nombre de una especificación.
-#com.ipartek.formacion: va a ser el filtro para todos los logs (se mostrará de com.ipartek.formacion)
+#com.ipartek.formacion: va a ser el filtro para todos los logs (Se mostrará de com.ipartek.formacion)
 #log4j es obligatoria
 #.logger: si queremos hacer referencia en la configuracion a algun logger
 #rootCategory hace referencia a todos los logs de la aplicación.
