He creado un Listener para HTTP session events
He creado un Listener para Servlet context events
	-He preparado el LOG para las trazas

--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -79,4 +79,7 @@
   <listener>
     <listener-class>com.ipartek.formacion.controller.listeners.InitListener</listener-class>
   </listener>
+  <listener>
+    <listener-class>com.ipartek.formacion.controller.listeners.SessionListener</listener-class>
+  </listener>
 </web-app>
