Creamos un boton de listar usuarios conectados en index.jsp en LoginServlet gestionamos el boton

--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -82,4 +82,7 @@
   <listener>
     <listener-class>com.ipartek.formacion.controler.listeners.InitListener</listener-class>
   </listener>
+  <listener>
+    <listener-class>com.ipartek.formacion.controler.listeners.SessionListener</listener-class>
+  </listener>
 </web-app>
