Añadido el listado de usuarios activo (usuarios/listado.jsp), su funcionalidad con el servlet(UsuariosActivosServlet), y el SessionListener para control de las sesiones.

--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -80,4 +80,17 @@
   <listener>
     <listener-class>com.ipartek.formacion.controller.listeners.InitListener</listener-class>
   </listener>
+  <listener>
+    <listener-class>com.ipartek.formacion.controller.listeners.SessionListener</listener-class>
+  </listener>
+  <servlet>
+    <description></description>
+    <display-name>UsuariosActivosServlet</display-name>
+    <servlet-name>UsuariosActivosServlet</servlet-name>
+    <servlet-class>com.ipartek.formacion.controller.UsuariosActivosServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UsuariosActivosServlet</servlet-name>
+    <url-pattern>/usuariosActivos.do</url-pattern>
+  </servlet-mapping>
 </web-app>
